[package]
name = "graphql"
version = "0.1.0"
authors = ["dohaicuong <beatyshot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.scripts]
dev = "systemfd --no-pid -s http::4000 -- cargo watch -x run"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
listenfd = "0.3"
actix-web = "1.0.0"
juniper = "0.14.1"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
env_logger = "0.6"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"